<resources>
    <string name="Cuong">Nguyen Nhat Cuong</string>
    <string name="Bao">Tran Le Quoc Bao</string>
    <string name="Minh">Doan Nhat Minh</string>
    <string name="Thong">Vo Tran Quang Thong</string>

    <string name="copyright">Powered by</string>

    <string name="app_name">Voice Recorder</string>
    <string name="version">Version 1.0.0</string>

    <string name="my_folder">My folders</string>
    <string name="all_records">All records</string>
    <string name="recently_deleted">Recently deleted</string>
    <string name="record">Records</string>

    <string name="new_folder">New folder</string>
    <string name="rename_folder">Rename folder</string>
    <string name="input_folder_name">Input this folder\'s name.</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="recorder">Recorder</string>
    <string name="player">Player</string>
    <string name="setting">Setting</string>
    <string name="press_record">Press the button to record</string>
    <string name="new_record">New record</string>
    <string name="input_record_name">Input this record\'s name</string>
    <string name="exist_record_name">Existed record\'s name </string>
    <string name="overwrite_record">Do you want to overwrite existed record\'s name?</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="recover">Recover</string>
    <string name="recover_all">Recover all</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="search">Search</string>
    <string name="justNow">Just now</string>
    <string name="aMinAgo">A minute ago</string>
    <string name="manyMinAgo">minutes ago</string>
    <string name="anHourAgo">An hour ago</string>
    <string name="manyHourAgo">hours ago</string>
    <string name="aDayAgo">A day ago</string>
    <string name="manyDayAgo">days ago</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="volume">Volume</string>
    <string name="continuous">Continuous play</string>
    <string name="block_call">Block calls while recording</string>

    <string name="is_on">is on</string>
    <string name="is_off">is off</string>

    <string name="existing_name">This name exists already!</string>
    <string name="namesake">You\'re reusing the old name!</string>
    <string name="delete_folder">Delete this folder</string>
    <string name="alert_delete_folder">All items in this folder would be deleted!</string>
    <string name="delete_folders">Delete folders</string>
    <string name="alert_delete_folders">All items in these folders would be deleted!</string>
    <string name="deleted">Deleted</string>

    <string name="error">Something went wrong!</string>
    <string name="detail">Details</string>

    <string name="empty_folder">Folder is empty!</string>
    <string name="record_name">Record name</string>

    <string name="delete_all_alert">All records have been moved to trash!</string>
    <string name="recover_all_alert">All records have been recovered!</string>
    <string name="delete_alert">Chosen records have been moved to trash!</string>
    <string name="recover_alert">Chosen records have been recovered!</string>
    <string name="delete_record">Delete records</string>
    <string name="permanently_deleted">Records would be permanently deleted!</string>
    <string name="per_deleted_record_alert">Chosen records have been permanently deleted!</string>
    <string name="per_deleted_all_record_alert">All records have been permanently deleted!</string>

    <string name="recover_record">Recover records</string>
    <string name="recover_description">Records would be overwritten on the same name file in folder!</string>
    <string name="guide">How to use</string>

    <string name="guide_folder_1">1. Choose default folder to contain record</string>
    <string name="guide_folder_2">2. View records are deleted recently</string>
    <string name="guide_folder_3">3. Choose created folder to contain record</string>
    <string name="guide_folder_4">4. Press to delete folder</string>
    <string name="guide_folder_5">5. Press to create new folder</string>

    <string name="guide_player_1">1. Choose record to play</string>
    <string name="guide_player_2">2. Press to show option search and select records to delete</string>
    <string name="guide_player_3">3. Search records</string>
    <string name="guide_player_4">4. Select records to delete</string>
    <string name="guide_player_5">5. Previous record</string>
    <string name="guide_player_6">6. Next record</string>
    <string name="guide_player_7">7. Play/Pause record</string>
    <string name="guide_player_8">8. Delete playing record</string>

    <string name="guide_recently_delete_1">1. Choose record to play</string>
    <string name="guide_recently_delete_2">2. Select records to delete or recover</string>
    <string name="guide_recently_delete_3">3. Search records</string>
    <string name="guide_recently_delete_4">4. Previous record</string>
    <string name="guide_recently_delete_5">5. Next record</string>
    <string name="guide_recently_delete_6">6. Play/Pause record</string>

    <string name="guide_recorder_1">1. Press to start record</string>
    <string name="guide_recorder_2">2. Show option view details and view guide</string>
    <string name="guide_recorder_3">3. View details</string>
    <string name="guide_recorder_4">4. View how to use</string>
    <string name="guide_recorder_5">5. Stop record</string>
    <string name="guide_recorder_6">6. Pause record</string>

    <string name="guide_setting_1">1. Adjust volume</string>
    <string name="guide_setting_2">2. Turn on to play records continuously</string>
    <string name="guide_setting_3">3. Turn on to block incoming call while recording</string>

    <string name="name2">Name:</string>
    <string name="lenght">Lenght:</string>
    <string name="created_time">Created Time:</string>

</resources>