<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:background="@color/light_red"
            android:gravity="center"
            android:text="@string/recently_deleted"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:layout_marginVertical="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="8dp"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="500dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/guide_recently_deleted"
                    android:adjustViewBounds="true"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_5"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".6"
                android:paddingTop="8dp"
                android:text="@string/guide_recently_delete_6"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>