<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/custom_diaglog"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/mainTitleDialogMakeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_folder"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/descriptionDialogMakeChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_folder_name"
        android:textSize="16dp"
        android:textColor="@color/aux_item"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/newName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColorHint="@color/grey"
        android:textSize="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_margin="16dp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext_diaglog"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/underline"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/cancelDialogMakeChange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:background="@drawable/button_cancel_dialog_click"
                android:text="@string/cancel"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:background="@drawable/underline"/>

            <Button
                android:id="@+id/saveDialogMakeChange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:background="@drawable/button_save_dialog_click"
                android:text="@string/save"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="@color/black"
                android:enabled="false"
                android:alpha="0.2"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>