<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        android:text="Volume"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"/>

    <SeekBar
        android:id="@+id/seekBarVolume"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/aux_item"
        android:progressTint="@color/light_red"
        android:thumbTint="@color/light_red" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/underline" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/continuous"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/continuousCheck"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@android:color/transparent"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/underline" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/block_call"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>

        <Switch
            android:id="@+id/blockCallCheck"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/toggle_selector"
            android:textOff=""
            android:textOn=""
            android:thumb="@android:color/transparent"
            android:track="@android:color/transparent" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/underline" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="128dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/logo"
            android:alpha=".60"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/aux_item"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@color/aux_item"
            android:textSize="14dp"/>

    </LinearLayout>

</LinearLayout>